--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- 
+Template created by Kyle Shanks (https://codepen.io/mavrK/pen/PzGvdJ) 
+Licensed under the MIT License 
+-->
 <!DOCTYPE html>
 <html lang="en" >
 <head>
