--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ Licensed under the MIT License
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+<!--index.html -->
 <!-- FONTS -->
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600' rel='stylesheet' type='text/css'>
 <link href='https://fonts.googleapis.com/css?family=Raleway:100' rel='stylesheet' type='text/css'>
