--- a/404.html
+++ b/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-uk">
 <head>
   <meta charset="UTF-8">
   <title>404 Not Found - MyWebsite</title>
@@ -56,13 +56,13 @@
                 <svg viewbox="0 0 80 80" class="rela-block logo-svg">
                     <path d="M 10 10 L 52 10 L 72 30 L 72 70 L 30 70 L 10 50 Z" stroke-width="2.5" fill="none"/>
                 </svg>
-                <p class="logo-text">kj</p>
+                <p class="logo-text">NK</p>
             </div>
         </div>
-        <p>123 My Place Drive</p>
-        <p>Astoria, New York 11105</p>
-        <p>1-800-CALLPLZ</p>
-        <p>emailsareforsquares@gmail.com</p><br>
+        <p>21 Spirou Patsi</p>
+        <p>Athens, 10449, Greece</p>
+        <p>6986258231</p>
+        <p>n.d.kleovoulou@gmail.com</p><br>
     </div>
     <div class="rela-block content-container">
         <h1 class="rela-block caps title">404</h1>
